--- a/styles/main.css
+++ b/styles/main.css
@@ -3,8 +3,10 @@ body {
 
 	width: 100%;
 	height: 100%;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
+
+	overflow: hidden;
 }
 
 #layout {
@@ -13,8 +15,6 @@ body {
 	box-sizing: border-box;
 
 	width: 100%;
-	/* height: 100%; */
-	border: 1px solid rgba(0, 0, 0, 0.2);
 
 	cursor: pointer;
 }
